<resources>
    <string name="label">玩安卓</string>
    <string name="privacy_policy_content_link">《隐私政策》</string>
    <string name="privacy_policy_content">感谢您使用玩安卓！\n我们依据最新的监管要求更新了《隐私政策》特向您说明如下：\n1. 为向您提供交易相关基本功能，我们会收集、使用必要的信息；\n2. 基于您的明示授权我们会获取存储权限，用于保存文章分享图，您有权拒绝或取消授权；\n3. 我们会采取安全措施保护您的信息安全；\n4. 未经您同意，我们不会从第三方处获取、共享或向其提供您的信息。</string>

    <string name="activity_share_article_title">分享文章</string>
    <string name="activity_share_article_article_title">文章标题</string>
    <string name="activity_share_article_link_title">文章链接</string>
    <string name="activity_share_article_refresh_btn">刷新标题</string>
    <string name="activity_share_article_open_btn">打开链接</string>
    <string name="activity_share_article_share_btn">分享</string>
    <string name="activity_share_article_title_hint">100字以内</string>
    <string name="activity_share_article_link_hint">如：https://www.wanandroid.com/blog/show/2577</string>
    <string name="activity_share_article_share_desc">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;\n3. 其他个人站点会进入审核阶段，不要投递任何无效链接，否则可能会对你的账号产生一定影响;\n4. 如果你发现错误，可以提交日志，让我们一起使网站变得更好。\n5. 由于本站为个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系...</string>


</resources>
