<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorForeground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <per.goweii.actionbarex.common.ActionBarCommon
            android:id="@+id/toolbar"
            style="@style/ActionBar.Common.Back"
            app:abc_titleText="@string/activity_share_article_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_share_article_article_title"
                android:textColor="?colorTextSecond"
                android:textSize="@dimen/text_notes" />

            <TextView
                android:id="@+id/refreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/titleTv"
                android:layout_alignParentEnd="true"
                android:text="@string/activity_share_article_refresh_btn"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_notes" />

            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTv"
                android:layout_marginTop="10dp"
                android:background="?colorTransparent"
                android:gravity="top"
                android:hint="@string/activity_share_article_title_hint"
                android:maxLines="5"
                android:minLines="2"
                android:textColor="?colorTextSurface"
                android:textColorHint="?colorTextThird"
                android:textSize="@dimen/text_content" />

            <TextView
                android:id="@+id/linkTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleEt"
                android:layout_marginTop="16dp"
                android:text="@string/activity_share_article_link_title"
                android:textColor="?colorTextSecond"
                android:textSize="@dimen/text_notes" />

            <TextView
                android:id="@+id/openBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/linkTv"
                android:layout_alignParentRight="true"
                android:text="@string/activity_share_article_open_btn"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_notes" />

            <EditText
                android:id="@+id/linkEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linkTv"
                android:layout_marginTop="10dp"
                android:background="?colorTransparent"
                android:gravity="top"
                android:hint="@string/activity_share_article_link_hint"
                android:maxLines="5"
                android:minLines="2"
                android:textColor="?colorTextSurface"
                android:textColorHint="?colorTextThird"
                android:textSize="@dimen/text_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/shareBtn"
            style="@style/ButtonMain"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_def"
            android:layout_marginRight="@dimen/margin_big"
            android:text="@string/activity_share_article_share_btn" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:lineSpacingExtra="6sp"
        android:padding="16dp"
        android:text="@string/activity_share_article_share_desc"
        android:textColor="?colorTextThird"
        android:textSize="@dimen/text_notes" />

    <per.goweii.wanandroid.utils.web.view.WebContainer
        android:id="@+id/webContainer"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</RelativeLayout>